--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -1,4 +1,12 @@
+/* Flexbox */
+.flex-projects {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
 /* Projects Container */
+
 div.project-container {
     display: block;
     flex: 1 0 50%;
@@ -9,7 +17,7 @@ div.project-container {
 .project-image-container {
     overflow: hidden;
     position: relative;
-    width: 100%;
+    /* width: 100%; */
     box-shadow: 5px 5px 5px #2c2c2c;
 }
 
@@ -96,4 +104,10 @@ div.project-container {
     font-weight: bold;
     font-size: 1rem;
     margin-top: 2%;
+}
+@media screen and (min-width:800px) {
+    .flex-projects {
+        flex-wrap: wrap;
+        flex-direction: row;
+    }
 }
