--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -456,7 +456,6 @@ main {
     }
 
     .main-menu__item {
-        /*  margin-top: 2rem; */
         margin-bottom: 4rem; 
      }
 
@@ -501,27 +500,39 @@ main {
     }
 
     .main-menu {
-        display: flex;
-        flex-direction: row;
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 8rem;
+        padding: 0;
+        overflow: hidden;
+        background: #248EE3;
+        box-shadow: 2px 2px 2px 2px #248EE3 ;
+        z-index: 50;
     }
 
-    .main-menu__items {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    width: auto;
-    align-items: center;
-    padding: 0;
-    background: none;
-    overflow: hidden;
-    text-align: center;
-    position: fixed;
-    top: 0px;
-    background: #248ee3;
-    width: 100%;
-    height: 15%;
+    .main-menu div {
+        float: left;
+        margin: 0;
+        line-height: 9rem;
+        color: #FFF;
+        padding-top: 1rem;
     }
 
+    .main-menu a {
+        display: block;
+        float: right;
+        height: 10rem;
+        font-size: 2rem;
+        line-height: 8rem;
+        padding: 0 15px;
+        min-width: 50px;
+        text-align: center;
+        background: rgba(255,255,255,0);
+        text-decoration: none;
+        color: #FFF;
+    }
 
     .main-menu__link {
         font-size: 2rem;
