changed background color on overlay buttons

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -235,7 +235,7 @@ main {
 .external-links-overlay p a {
     border-radius: 15px;
     padding: 6px 12px;
-    background-color: lightblue;
+    background-color: #248EE3;
     color: #000;
     text-decoration: none;
     border: 1px solid transparent;
