--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -100,33 +100,22 @@ main {
     cursor: default;
 }
 
-.main-menu__items {
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 200px;
-}
 
-.main-menu__item {
-    margin-top: 5rem;
-}
-
-.main-menu__link {
+.main-menu a {
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     color: #2c2c2c;
     text-decoration: none;
     padding: 10px;
-    font-size: 24px;
+    font-size: 2.5rem;
 }
 
-.main-menu>ul>li>a>i {
+.main-menu a>i {
     font-size: 36px;
     color: #2c2c2c;
 }
 
-.main-menu>ul>li>a:hover {
+.main-menu a:hover {
     cursor: pointer;
     border-bottom: 1px solid #2c2c2c;
 }
@@ -412,71 +401,6 @@ main {
     }
 }
 
-@media screen and (min-width: 1024px) {
-    .about-container {
-        font-size: 2rem;
-        margin-top: 20rem;
-        margin-bottom: 20rem;
-    }
-
-    .intro-container {
-        height: 50vh;
-    }
-
-    .intro-container__pre {
-        font-size: 2.5rem;
-        line-height: 5rem;
-    }
-
-    .menu-toggle,
-    .main-menu .menu-close {
-        display: none;
-    }
-
-    .main-menu {
-        position: fixed;
-        left: 0px;
-        display: block;
-    }
-
-    .main-menu__items {
-        display: flex;
-        flex-direction: column;
-        width: auto;
-        align-items: center;
-        padding: 0;
-        background: none;
-        overflow: hidden;
-        text-align: center;
-    }
-
-    .main-menu__items:first-child {
-        position: fixed;
-        left: 30px;
-    }
-
-    .main-menu__item {
-        margin-bottom: 4rem; 
-     }
-
-    .main-menu__link {
-        font-size: 2rem;
-    }
-
-    .main-menu__items:last-child {
-        font-weight: bold;
-    }
-
-    .projects-flex {
-        flex-wrap: wrap;
-        flex-direction: row;
-    }
-
-    .projects-title {
-        color: #3e444f;
-        font-size: 3rem;
-    }
-}
 
 @media screen and (min-width:1024px) {
      .about-container {
@@ -485,6 +409,12 @@ main {
         margin-bottom: 20rem;
     }
 
+    .about-title {
+        color: #3e444f;
+        font-size: 3rem;
+        font-family: 'Prata', serif;
+    }
+
     .intro-container {
         height: 50vh;
     }
@@ -501,6 +431,7 @@ main {
 
     .main-menu {
         position: fixed;
+        display: block;
         left: 0;
         top: 0;
         width: 100%;
@@ -524,22 +455,14 @@ main {
         display: block;
         float: right;
         height: 10rem;
-        font-size: 2rem;
+        font-size: 2.5rem;
         line-height: 8rem;
         padding: 0 15px;
         min-width: 50px;
         text-align: center;
-        background: rgba(255,255,255,0);
-        text-decoration: none;
-        color: #FFF;
-    }
-
-    .main-menu__link {
-        font-size: 2rem;
-    }
-
-    .main-menu__items:last-child {
         font-weight: bold;
+        text-decoration: none;
+        color: #2c2c2c;
     }
 
     .projects-flex {
@@ -551,9 +474,6 @@ main {
         color: #3e444f;
         font-size: 3rem;
     }
-    .about-title {
-        color: #3e444f;
-        font-size: 3rem;
-        font-family: 'Prata', serif;
-    }
+  
+   
 }
