--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -449,6 +449,7 @@ main {
         line-height: 9rem;
         color: #FFF;
         padding-top: 1rem;
+        padding-left: 30px;
     }
 
     .main-menu a {
@@ -457,14 +458,15 @@ main {
         height: 10rem;
         font-size: 2.5rem;
         line-height: 8rem;
-        padding: 0 15px;
+        padding-right: 30px;
+        margin-left: 15px;
         min-width: 50px;
         text-align: center;
         font-weight: bold;
         text-decoration: none;
         color: #2c2c2c;
     }
-
+   
     .projects-flex {
         flex-wrap: wrap;
         flex-direction: row;
