--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,9 +23,10 @@ body {
 
 /* Main Container */
 main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     margin: 0 auto;
-    max-width: 1200px;
-    min-width: 320px;
 }
 
 
@@ -49,8 +50,10 @@ main {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-top: 10rem;
+    margin-top: 8rem;
     height: 20vh;
+    background: #001A1A;
+    box-shadow: 3px 3px 3px 3px #001A1A;
 }
 
 .intro_container__typed {
@@ -106,18 +109,20 @@ main {
     font-weight: bold;
     color: #2c2c2c;
     text-decoration: none;
-    padding: 10px;
+    padding: 1rem;
     font-size: 2.5rem;
 }
 
 .main-menu a>i {
     font-size: 36px;
+    padding: 1rem;
     color: #2c2c2c;
 }
 
 .main-menu a:hover {
     cursor: pointer;
     border-bottom: 1px solid #2c2c2c;
+    background: #19B2FF;
 }
 
 .sr-only {
@@ -173,7 +178,7 @@ main {
     border: 2px solid #3e444f;
     box-shadow: 1px 1px 1px 1px #3e444f;
 }
-/* Contained in index.js */
+/* container.js styling */
 .projects-container {
     display: block;
     flex: 1 0 50%;
@@ -289,15 +294,19 @@ main {
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
 }
-
+.js-const-color {
+    color: #667FFF;
+}
 .js-var-color {
-    color: #3e444f;
+    color: #19B2FF;
 }
 
 .js-string-color {
-    color: #248ee3;
+    color: #efefef;
 }
-
+.js-bracket {
+    color:#efefef;
+}
 /* Footer */
 
 .footer {
@@ -404,17 +413,25 @@ main {
 
 @media screen and (min-width:1024px) {
      .about-container {
+        display: flex;
+        flex-direction: column;
         font-size: 2rem;
-        margin-top: 10rem;
+        margin-top: 5rem;
         margin-bottom: 20rem;
     }
 
     .about-title {
-        color: #3e444f;
+        color: #efefef;
+        background: #3e444f;
         font-size: 3rem;
         font-family: 'Prata', serif;
+        flex: 1 0 30%;
+        box-shadow: 3px 3px 3px 3px #3e444f;
     }
-
+    .about-container p {
+        margin: 1rem;
+        text-align: left;
+    }
     .intro-container {
         height: 50vh;
     }
@@ -448,7 +465,7 @@ main {
         margin: 0;
         line-height: 9rem;
         color: #FFF;
-        padding-top: 1rem;
+        padding: 1rem;
         padding-left: 30px;
     }
 
@@ -458,22 +475,26 @@ main {
         height: 10rem;
         font-size: 2.5rem;
         line-height: 8rem;
-        padding-right: 30px;
         margin-left: 15px;
-        min-width: 50px;
+        /* min-width: 50px; */
         text-align: center;
         font-weight: bold;
         text-decoration: none;
         color: #2c2c2c;
     }
-   
+
     .projects-flex {
+        display: flex;
         flex-wrap: wrap;
         flex-direction: row;
     }
-
+    .projects-container {
+        flex: 1 0 25%;
+    }
     .projects-title {
-        color: #3e444f;
+        color: #efefef;
         font-size: 3rem;
+        background: #3e444f;
+        box-shadow: 3px 3px 3px 3px #3e444f;
     }
 }
