--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,5 @@
-@import url(https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Prata&display=swap);
+@import url('https://fonts.googleapis.com/css2?family=Capriola&family=Prompt:wght@900&display=swap');
+
 
 
 /* html/body */
@@ -15,9 +16,12 @@ html {
 }
 
 body {
-    font-family: 'Prata', serif;
-    background: #efefef;
+    font-family: 'Capriola', serif;
+    background: #001A1A;
 }
+
+/* Animated Background */
+
 
 /* Container Styles */
 
@@ -34,7 +38,7 @@ main {
 
 
 .about-container {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Capriola', sans-serif;
     font-weight: bold;
     text-align: center;
     font-size: .8rem;
@@ -50,9 +54,10 @@ main {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-top: 8rem;
-    height: 20vh;
-    background: #001A1A;
+    margin-top: 20rem;
+    margin-bottom: 10rem;
+    /* height: 20vh; */
+    /* background: #001A1A; */
     box-shadow: 3px 3px 3px 3px #001A1A;
 }
 
@@ -157,6 +162,7 @@ main {
 
 .projects-title {
     color: #3e444f;
+    font-family: 'Prompt', sans-serif;
     font-size: 1rem;
     text-align: center;
     margin-top: 5rem;
@@ -168,13 +174,14 @@ main {
 }
 .about-title {
     color: #3e444f;
+    font-family: 'Prompt', sans-serif;
     font-size: 1rem;
     text-align: center;
     margin-top: 2rem;
     margin-bottom: 1rem;
     margin-left: 1rem;
     margin-right: 1rem;
-    font-family: 'Prata', serif;
+    font-family: 'Prompt', serif;
     border: 2px solid #3e444f;
     box-shadow: 1px 1px 1px 1px #3e444f;
 }
@@ -416,15 +423,16 @@ main {
         display: flex;
         flex-direction: column;
         font-size: 2rem;
-        margin-top: 5rem;
-        margin-bottom: 20rem;
+        max-width: 50%;
+        margin: 0 auto;
+        color: #efefef;
     }
 
     .about-title {
         color: #efefef;
         background: #001A1A;
         font-size: 3rem;
-        font-family: 'Prata', serif;
+        font-family: 'Prompt', sans-serif;
         flex: 1 0 30%;
         box-shadow: 2px 2px 2px 2px #001A1A;
     }
@@ -487,11 +495,19 @@ main {
         display: flex;
         flex-wrap: wrap;
         flex-direction: row;
+        justify-content: center;
+        max-width: 100%;
+        margin: 1rem;
     }
     .projects-container {
-        flex: 1 0 45%;
-        max-width: 45%;
-        margin: auto;
+        flex: 1 0 40%;
+        max-width: 500px;
+        margin: 1rem;
+
+    }
+    .projects-container__content {
+        max-width: 100%;
+        margin: 1rem auto;
     }
     .projects-title {
         color: #efefef;
