--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,8 +3,10 @@
 
 
 /* html/body */
-html {
+html, body {
     box-sizing: border-box;
+    font-family: 'Capriola', serif;
+    background:#001A1A;
 }
 
 *,
@@ -15,27 +17,20 @@ html {
     padding: 0;
 }
 
-body {
-    font-family: 'Capriola', serif;
-    background: #001A1A;
-}
-
-/* Animated Background */
 
 
 /* Container Styles */
 
 /* Main Container */
-main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: 0 auto;
+.animation-area {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    background: transparent;
 }
 
-
 /* About Container */
-
 
 .about-container {
     font-family: 'Capriola', sans-serif;
@@ -68,6 +63,7 @@ main {
 .intro-container__pre {
     font-size: 1rem;
     line-height: 2rem;
+    font-family: 'Capriola', sans-serif;
 }
 
 /* Navigation - Mobile First */
@@ -165,10 +161,8 @@ main {
     font-family: 'Prompt', sans-serif;
     font-size: 1rem;
     text-align: center;
-    margin-top: 5rem;
-    margin-bottom: 1rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    max-width: 50%;
+    margin: 5rem auto;
     border: 2px solid #3e444f;
     box-shadow: 1px 1px 1px 1px #3e444f;
 }
@@ -177,10 +171,7 @@ main {
     font-family: 'Prompt', sans-serif;
     font-size: 1rem;
     text-align: center;
-    margin-top: 2rem;
-    margin-bottom: 1rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    margin: 2rem 1rem;
     font-family: 'Prompt', serif;
     border: 2px solid #3e444f;
     box-shadow: 1px 1px 1px 1px #3e444f;
@@ -514,5 +505,21 @@ main {
         font-size: 3rem;
         background: #001A1A;
         box-shadow: 2px 2px 2px 2px #001A1A;
+    }
+    .footer {
+        margin-top: 10rem;
+    }
+    .footer-content {
+        display: flex;
+        justify-content: center;
+        line-height: 2rem;
+        font-size: 100px;
+        list-style: none;
+    }
+    .footer-content li {
+        margin: 1rem;
+    }
+    .footer-content li>a>i {
+        color: #248EE3
     }
 }
