--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,6 +48,7 @@ html, body {
     justify-content: center;
     margin-top: 5rem;
     margin-bottom: 10rem;
+    height: 20vh;
     box-shadow: 3px 3px 3px 3px #001A1A;
 }
 
@@ -66,9 +67,11 @@ html, body {
 .main-menu {
     background: #248EE3;
     position: fixed;
+    width: 50%;
     height: 100%;
     z-index: 999;
-    display: none;
+    display: flex;
+    flex-direction: column;
     left: -200px;
     top: 0;
     overflow-x: visible;
@@ -104,9 +107,10 @@ html, body {
     font-family: 'Prompt', sans-serif;
     font-weight: bold;
     color: #2c2c2c;
+    display: flex;
     text-decoration: none;
     padding: 1rem;
-    font-size: 2.5rem;
+    font-size: 1.5rem;
 }
 
 .main-menu a>i {
@@ -133,9 +137,12 @@ html, body {
 }
 
 .menu-toggle {
-    color: #3e444f;
+    color: #efefef;
     margin-left: 1rem;
     font-size: 2rem;
+    position: fixed;
+    left: 0;
+    top: 0;
 }
 
 .menu-toggle:hover,
@@ -165,8 +172,9 @@ html, body {
     color: #efefef;
     font-family: 'Prompt', sans-serif;
     font-size: 1rem;
+    max-width: 50%;
     text-align: center;
-    margin: 2rem 1rem;
+    margin: 2rem auto;
     font-family: 'Prompt', serif;
     border: 2px solid #3e444f;
     box-shadow: 1px 1px 1px 1px #3e444f;
@@ -337,12 +345,34 @@ html, body {
     }
 }
 
+/* Phones */
+@media screen and(min-width: 375px) {
+    .main-menu {
+        width: 20%;
+    }
+}
+@media screen and (min-width: 425px) {
+    .main-menu {
+        width: 30%;
+    }
+    .about-content {
+        text-align: left;
+        margin: 1rem;
+    }
+}
 /* Tablet */
-
 @media screen and (min-width: 768px) {
     .projects-flex {
         display: flex;
         flex-direction: row;
+    }
+    .main-menu {
+        width: 25%;
+    }
+    .about-content {
+        max-width: 50%;
+        margin: 0 auto;
+        text-align: left;
     }
 }
 
@@ -353,7 +383,6 @@ html, body {
         display: flex;
         flex-direction: column;
         font-size: 2rem;
-        max-width: 50%;
         margin: 0 auto;
         color: #efefef;
     }
@@ -363,12 +392,11 @@ html, body {
         background: #001A1A;
         font-size: 3rem;
         font-family: 'Prompt', sans-serif;
-        flex: 1 0 30%;
+        width: 100%;
         box-shadow: 2px 2px 2px 2px #001A1A;
     }
-    .about-container p {
-        margin: 1rem;
-        text-align: left;
+    .about-content {
+        max-width: 75%;
     }
     .intro-container {
         margin-top: 10rem;
@@ -415,7 +443,6 @@ html, body {
         font-size: 1.5rem;
         line-height: 5rem;
         margin-left: 15px;
-        /* min-width: 50px; */
         text-align: center;
         font-weight: bold;
         text-decoration: none;
@@ -427,19 +454,10 @@ html, body {
         flex-wrap: wrap;
         flex-direction: row;
         justify-content: center;
-        max-width: 100%;
-        margin: 1rem;
+        margin: 0 auto;
+        max-width: 1200px;
     }
-    .projects-container {
-        flex: 1 0 40%;
-        max-width: 500px;
-        margin: 1rem;
 
-    }
-    .projects-container__content {
-        max-width: 100%;
-        margin: 1rem auto;
-    }
     .projects-title {
         color: #efefef;
         font-size: 3rem;
@@ -464,5 +482,20 @@ html, body {
     }
     .footer-content li>a>i {
         color: #001A1A
+    }
+}
+@media screen and (min-width: 1440px) {
+    .projects-flex {
+        max-width: 960px;
+    }
+}
+/* Ultra Wide */
+@media screen and (min-width: 2560px) {
+    .about-content {
+        max-width: 50%;
+    }
+
+    .projects-flex {
+        max-width: 1600px;
     }
 }
