--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -277,6 +277,36 @@ hr.major {
   text-align: right;
 }
 
+.works > section {
+  display: flex;
+  flex-direction: row;
+  min-height: 22.5rem;
+}
+.works > section > .image {
+  background-position: center center;
+  background-size: cover;
+  border-radius: 0;
+  display: block;
+  position: relative;
+  width: 25em;
+}
+.works > section > .image img {
+  border-radius: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.works > section > .image:before {
+  content: "";
+  display: block;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  width: 100%;
+}
+
 /* Wrapper Component */
 .wrapper {
   position: relative;
@@ -305,16 +335,16 @@ hr.major {
   background-color: #312450;
 }
 .wrapper.style1 {
-  background-color: #5e42a6;
+  background-color: #72A0C1;
 }
 .wrapper.style1-alt {
-  background-color: #493382;
+  background-color: #003487;
 }
 .wrapper.style2 {
-  background-color: #5052b5;
+  background-color: #72A0C1;
 }
 .wrapper.style2-alt {
-  background-color: #3e4094;
+  background-color: #4f88b1;
 }
 .wrapper.style3 {
   background-color: #b74e91;
@@ -374,6 +404,179 @@ body.is-ie .wrapper.fullscreen {
 }
 .wrapper.fade.inactive > .inner, body.is-preload .wrapper.fade > .inner {
   opacity: 0;
+}
+
+/* Button */
+input[type=submit],
+input[type=reset],
+input[type=button],
+button,
+.button {
+  appearance: none;
+  transition: border-color 0.2s ease;
+  background-color: transparent;
+  border: solid 1px black !important;
+  border-color: rgba(255, 255, 255, 0.05) !important;
+  border-radius: 3em;
+  color: #ffffff !important;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 0.6em;
+  font-weight: bold;
+  height: calc(4.75em + 2px);
+  letter-spacing: 0.2em;
+  line-height: 4.75em;
+  outline: 0;
+  padding: 0 3.75em;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  white-space: nowrap;
+}
+input[type=submit]:after,
+input[type=reset]:after,
+input[type=button]:after,
+button:after,
+.button:after {
+  transform: scale(0.25);
+  pointer-events: none;
+  transition: opacity 0.2s ease;
+  transform: 0.2s ease;
+  background-color: #312450;
+  border-radius: 3em;
+  content: "";
+  height: 100%;
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+input[type=submit].icon:before,
+input[type=reset].icon:before,
+input[type=button].icon:before,
+button.icon:before,
+.button.icon:before {
+  margin-right: 0.75em;
+}
+input[type=submit].fit,
+input[type=reset].fit,
+input[type=button].fit,
+button.fit,
+.button.fit {
+  width: 100%;
+}
+input[type=submit].small,
+input[type=reset].small,
+input[type=button].small,
+button.small,
+.button.small {
+  font-size: 0.4em;
+}
+input[type=submit].large,
+input[type=reset].large,
+input[type=button].large,
+button.large,
+.button.large {
+  font-size: 0.8em;
+}
+input[type=submit].primary,
+input[type=reset].primary,
+input[type=button].primary,
+button.primary,
+.button.primary {
+  background-color: #ffffff;
+  color: #312450 !important;
+}
+input[type=submit].primary:after,
+input[type=reset].primary:after,
+input[type=button].primary:after,
+button.primary:after,
+.button.primary:after {
+  display: none;
+}
+input[type=submit].disabled, input[type=submit]:disabled,
+input[type=reset].disabled,
+input[type=reset]:disabled,
+input[type=button].disabled,
+input[type=button]:disabled,
+button.disabled,
+button:disabled,
+.button.disabled,
+.button:disabled {
+  cursor: default;
+  opacity: 0.5;
+  pointer-events: none;
+}
+input[type=submit]:hover,
+input[type=reset]:hover,
+input[type=button]:hover,
+button:hover,
+.button:hover {
+  border-color: #412350 !important;
+}
+input[type=submit]:hover:after,
+input[type=reset]:hover:after,
+input[type=button]:hover:after,
+button:hover:after,
+.button:hover:after {
+  opacity: 0.05;
+  transform-origin: scale(1);
+}
+input[type=submit]:hover:active,
+input[type=reset]:hover:active,
+input[type=button]:hover:active,
+button:hover:active,
+.button:hover:active {
+  border-color: #ffffff !important;
+}
+input[type=submit]:hover:active:after,
+input[type=reset]:hover:active:after,
+input[type=button]:hover:active:after,
+button:hover:active:after,
+.button:hover:active:after {
+  opacity: 0.1;
+}
+
+.image {
+  border-radius: 0.5em;
+  border: 0;
+  display: inline-block;
+  position: relative;
+}
+.image img {
+  border-radius: 0.5em;
+  display: block;
+}
+.image.left, .image.right {
+  max-width: 40%;
+}
+.image.left img, .image.right img {
+  width: 100%;
+}
+.image.left {
+  float: left;
+  margin: 0 1.5rem 1em 0;
+  top: 0.25em;
+}
+.image.right {
+  float: right;
+  margin: 0 0 1em 1.5em;
+  top: 0.25em;
+}
+.image.fit {
+  display: block;
+  margin: 0 0 0.35em 0;
+  width: 100%;
+}
+.image.main {
+  display: block;
+  margin: 0 0 calc(2em * 1.5) 0;
+  width: 100%;
+}
+.image.main img {
+  width: 100%;
 }
 
 .sp-pixel {
@@ -450,77 +653,17 @@ body.is-ie #sidebar > .inner {
 #sidebar nav > ul > li:first-child {
   margin: 0;
 }
-#sidebar nav > ul > li:nth-child(1) {
-  transition-delay: calc(1s * 0.2 * $i + 1s * 0.25);
-}
-#sidebar nav > ul > li:nth-child(2) {
-  transition-delay: calc(1s * 0.2 * $i + 1s * 0.25);
-}
-#sidebar nav > ul > li:nth-child(3) {
-  transition-delay: calc(1s * 0.2 * $i + 1s * 0.25);
-}
-#sidebar nav > ul > li:nth-child(4) {
-  transition-delay: calc(1s * 0.2 * $i + 1s * 0.25);
-}
-#sidebar nav > ul > li:nth-child(5) {
-  transition-delay: calc(1s * 0.2 * $i + 1s * 0.25);
-}
-#sidebar nav > ul > li:nth-child(6) {
-  transition-delay: calc(1s * 0.2 * $i + 1s * 0.25);
-}
-#sidebar nav > ul > li:nth-child(7) {
-  transition-delay: calc(1s * 0.2 * $i + 1s * 0.25);
-}
-#sidebar nav > ul > li:nth-child(8) {
-  transition-delay: calc(1s * 0.2 * $i + 1s * 0.25);
-}
-#sidebar nav > ul > li:nth-child(9) {
-  transition-delay: calc(1s * 0.2 * $i + 1s * 0.25);
-}
-#sidebar nav > ul > li:nth-child(10) {
-  transition-delay: calc(1s * 0.2 * $i + 1s * 0.25);
-}
-#sidebar nav > ul > li:nth-child(11) {
-  transition-delay: calc(1s * 0.2 * $i + 1s * 0.25);
-}
-#sidebar nav > ul > li:nth-child(12) {
-  transition-delay: calc(1s * 0.2 * $i + 1s * 0.25);
-}
-#sidebar nav > ul > li:nth-child(13) {
-  transition-delay: calc(1s * 0.2 * $i + 1s * 0.25);
-}
-#sidebar nav > ul > li:nth-child(14) {
-  transition-delay: calc(1s * 0.2 * $i + 1s * 0.25);
-}
-#sidebar nav > ul > li:nth-child(15) {
-  transition-delay: calc(1s * 0.2 * $i + 1s * 0.25);
-}
-#sidebar nav > ul > li:nth-child(16) {
-  transition-delay: calc(1s * 0.2 * $i + 1s * 0.25);
-}
-#sidebar nav > ul > li:nth-child(17) {
-  transition-delay: calc(1s * 0.2 * $i + 1s * 0.25);
-}
-#sidebar nav > ul > li:nth-child(18) {
-  transition-delay: calc(1s * 0.2 * $i + 1s * 0.25);
-}
-#sidebar nav > ul > li:nth-child(19) {
-  transition-delay: calc(1s * 0.2 * $i + 1s * 0.25);
-}
-#sidebar nav > ul > li:nth-child(20) {
-  transition-delay: calc(1s * 0.2 * $i + 1s * 0.25);
-}
 #sidebar nav a {
   transition: color 0.2s ease;
-  border: 0;
+  border: 2px solid #72A0C1;
   color: #efefef;
   display: block;
-  font-size: 1em;
+  font-size: 0.8em;
   font-weight: bold;
-  letter-spacing: 0.5em;
-  line-height: 0.5;
+  letter-spacing: 0.2em;
+  line-height: 0.75;
   outline: 0;
-  padding: 1em 0;
+  padding: 0.5em 0;
   position: relative;
   text-decoration: none;
   text-transform: uppercase;
@@ -529,7 +672,7 @@ body.is-ie #sidebar > .inner {
   border-radius: 0.2em;
   bottom: 0;
   content: "";
-  height: 0.2em;
+  background: pink;
   position: absolute;
   right: 0;
   width: 100%;
@@ -543,7 +686,8 @@ body.is-ie #sidebar > .inner {
   max-width: 0;
 }
 #sidebar nav a:hover {
-  color: rgba(255, 255, 255, 0.6);
+  color: black;
+  background: #467ba0;
 }
 #sidebar nav a.active {
   color: #ffffff;
@@ -596,10 +740,7 @@ body.is-preload #sidebar nav ul li {
     height: inherit;
     line-height: inherit;
     padding: 0;
-  }
-  #sidebar nav a:after {
-    background-image: none;
-    background-color: #b74e91;
+    border: none;
   }
 }
 @media screen and (max-width: 736px) {
