--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -8,7 +8,7 @@ button,
   appearance: none;
   transition: border-color 0.2s ease;
   background-color: transparent;
-  border: solid 1px !important;
+  border: solid 1px black !important;
   border-color: rgba(255, 255, 255,0.05) !important;
   border-radius: 3em;
   color: #ffffff !important;
@@ -17,7 +17,7 @@ button,
   font-size: 0.6em;
   font-weight: bold;
   height: calc(4.75em + 2px);
-  letter-spacing: 0.25em;
+  letter-spacing: 0.2em;
   line-height: 4.75em;
   outline: 0;
   padding: 0 3.75em;
@@ -32,7 +32,7 @@ button,
     pointer-events: none;
     transition: opacity 0.2s ease;
     transform: 0.2s ease;
-    background: #312450;
+    background-color: #312450;
     border-radius: 3em;
     content: '';
     height: 100%;
