--- a/assets/sass/components/_wrapper.scss
+++ b/assets/sass/components/_wrapper.scss
@@ -17,7 +17,7 @@
 			}
 
 			@include breakpoint('<=small') {
-				padding:3em 2em;
+				padding: 3em 2em;
 			}
 		}
 
@@ -26,19 +26,19 @@
 		}
 
 		&.style1 {
-			background-color: #5e42a6;
+			background-color: #72A0C1;
 		}
 
 		&.style1-alt {
-			background-color: darken(#5e42a6, 10);
+			background-color: darken(#0048BA, 10);
 		}
 
 		&.style2 {
-			background-color: #5052b5;
+			background-color: #72A0C1;
 		}
 
 		&.style2-alt {
-			background-color: darken(#5052b5, 10);
+			background-color: darken(#72A0C1, 10);
 		}
 
 		&.style3 {
