--- a/assets/sass/layout/_sidebar.scss
+++ b/assets/sass/layout/_sidebar.scss
@@ -43,25 +43,19 @@
         &:first-child {
           margin: 0;
         }
-
-        @for $i from 1 through 20 {
-          &:nth-child(#{$i}) {
-            transition-delay: calc(1s * 0.2 * $i + 1s * 0.25);
-          }
-        }
       }
     }
     a {
       transition: color 0.2s ease;
-      border: 0;
+      border: 2px solid #72A0C1;
       color: #efefef;
       display: block;
-      font-size: 1em;
+      font-size: 0.8em;
       font-weight: bold;
-      letter-spacing: 0.5em;
-      line-height: .50;
+      letter-spacing: 0.2em;
+      line-height: .75;
       outline: 0;
-      padding: 1em 0;
+      padding: 0.5em 0;
       position: relative;
       text-decoration: none;
       text-transform: uppercase;
@@ -72,7 +66,8 @@
 					border-radius: 0.2em;
 					bottom: 0;
 					content: '';
-					height: 0.2em;
+					// height: 0.2em;
+					background: pink;
 					position: absolute;
 					right: 0;
 					width: 100%;
@@ -89,7 +84,8 @@
 				}
 
 				&:hover {
-					color:rgba(255,255,255,0.6);
+					color:rgba(0,0,0);
+					background: darken(#72A0C1, 15);
 				}
 
 				&.active {
@@ -156,11 +152,7 @@
 					height: inherit;
 					line-height: inherit;
 					padding: 0;
-
-					&:after {
-						background-image: none;
-						background-color: #b74e91;
-					}
+					border: none
 				}
       }  
     }
