--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -17,7 +17,10 @@
 @import 'base/typography';
 
 // Components
+@import 'components/works';
 @import 'components/wrapper';
+@import 'components/button';
+@import 'components/image';
 @import 'dan';
 
 // Layout
