--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -47,7 +47,7 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #ffffff;
+		color: #2c2c2c;
 		font-weight: bold;
 		line-height: 1.5;
 		margin: 0 0 (2em * 0.25) 0;
