--- a/assets/sass/components/_works.scss
+++ b/assets/sass/components/_works.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: row;
     min-height: 22.5rem;
+    border: 1px solid #000;
 
     > .image {
       background-position: center center;
@@ -30,7 +31,49 @@
         width: 100%;
       }
     }
+    > .content {
+      padding: 4em 5em;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: calc(75em - 25em);
+      -ms-flex: 1;
 
-   
+      > .inner {
+        transform: translateX(0) translateY(0);
+        transition: opacity 0.5s ease;
+        transform: 0.5s ease;
+        opacity: 1;
+      }
+    }
+    
+    @include breakpoint('<=xlarge') {
+      > .content {
+        padding: 4em 4em;
+      }
+    }
+
+    @include breakpoint('<=medium') {
+      display: block;
+
+      > .image {
+        width: 100%;
+        height: 50vh;
+      }
+      > .content {
+        width: 100%;
+      }
+    }
+
+    @include breakpoint('<=small') {
+      > .image {
+        height: 50vh;
+        min-height: 15em;
+      }
+
+      > .content {
+        padding: 3em 2em;
+      }
+    }
   }
 }
